# yambo

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  BUGS  ChangeLog  Download  E_FineGd  ISSUES  KNOWN-ISSUES  K_MAP  K_RANGE  Makefile  README  README.LIFE.parallelization  README.md  README.status  README_cineca  README_cuda_pgi.txt  RELEASE_NOTES  RELEASE_note.4.4.0  RT_DBs_carriers_setup.F  SLK_tools.F  alejandro_install.sh  alloc.awk  alloc.tcsh  check_if_clean  commit.msg  compile_the_driver  config.status  configscript.sh  configure  configure.ac  do  install.sh  patch  patch_to_make_yambo_ph_ito_work_with_rotatetd_gkkp  patch_to_work_without_gkkp  rectangle_long_only.c  time.tcsh  (+1 more)
config/: Makefile.in  Makefile.in_gpl  acx.m4  acx_blas.m4  acx_branch.m4  acx_cpp.m4  acx_fortran_flags.m4  acx_fpp.m4  acx_get_fc_kind.m4  acx_get_fc_version.m4  acx_get_mpi_kind.m4  acx_lapack.m4  acx_misc.m4  acx_mpi.m4  acx_report.m4  ax_f90_module_flag.m4  blas.m4  compilation_helper.sh.inc.in  configure.ac  cuda.m4  etsf_io.m4  fft.m4  fftw.m4  futile.m4  iotk.m4  lapack.m4  libxc.m4  mpi.m4  msg_ydb.in  netcdf_f90.m4  petsc_slepc.m4  report  report.in  scalapack.m4  scripts.m4  setup  setup.in  slepc.m4  slk.m4  version.m4  (+3 more)
config/m4/: acx_IO_wrap_up.m4  acx_branch.m4  acx_cpp.m4  acx_echo.m4  acx_fortran_flags.m4  acx_fpp.m4  acx_get_fc_kind.m4  acx_get_mpi_kind.m4  acx_misc.m4  acx_mpi.m4  acx_report.m4  acx_stripe_subpath.m4  acx_version.m4  ax_f90_module_flag.m4  blas.m4  cuda.m4  cuda_fortran.m4  device_xlib.m4  etsf_io.m4  fft.m4  futile.m4  gpu.m4  hdf5_f90.m4  iotk.m4  lapack.m4  libcuda.m4  libxc.m4  magma.m4  mpi.m4  netcdf_f90.m4  petsc_slepc.m4  scalapack.m4  scripts.m4  yambo_diago.m4  yambo_driver.m4  yambo_folders.m4  yambo_libraries.m4  yambo_remote_compilation_setup.m4  yambo_specific.m4  ydriver.m4
config/mk/: defs.mk  defs.mk.in  libraries.mk  no_configure_help.mk  targets.mk  variables.mk
config/mk/actions/: clean.mk  compile_external_libraries.mk  compile_interfaces.mk  compile_internal_libraries.mk  compile_yambo.mk  compile_yambo_libraries.mk  compile_ypp.mk  dependencies.mk  download_external_libraries.mk  help.mk
config/mk/functions/: cleaning.mk  get_libraries.mk  messaging.mk  mk_driver_src.mk  mk_exe.mk  mk_external_lib.mk  mk_external_yambo_lib.mk  mk_external_yambo_lib_IO.mk  mk_internal_lib.mk  mk_lib.mk  mk_src.mk  mk_ypp_src.mk  todo.mk
config/mk/global/: defs.mk.in  libraries.mk  libraries.mk_save  no_configure_help.mk  targets.mk
config/mk/global/actions/: clean.mk  compile_external_libraries.mk  compile_interfaces.mk  compile_internal_libraries.mk  compile_yambo.mk  compile_yambo_libraries.mk  compile_yambo_new.mk  compile_yambo_old.mk  compile_ypp.mk  compile_ypp.mk_save  compile_ypp_old.mk  dependencies.mk  download_external_libraries.mk  help.mk  remote_compilation.mk
config/mk/global/functions/: cleaning.mk  get_libraries.mk  global_check.mk  help.mk  messaging.mk  mk_exe.mk  mk_external_lib.mk  mk_lib.mk  todo.mk
config/mk/local/: defs.mk.in  functions.mk  make.inc.in  makefile  operations.mk  rules.mk
config/urls/: repos.list
config/version/: version.m4  version.m4_gpl
devel/: AUTHORS  ChangeLog  (+1 more)
devel/lib/libxc/: AUTHORS  Makefile.am  Makefile.loc  NEWS  README  TODO  aclocal.m4  configure
devel/lib/libxc/m4/: acx.m4  ax_f90_module_extension.m4  fc_integer.m4  fcflags.m4
devel/lib/libxc/src/: Makefile.am  Makefile.in  expint_e1.c  gga.c  gga_c_am05.c  gga_c_lm.c  gga_c_op.c  gga_c_p86.c  gga_c_pw91.c  gga_c_sogga11.c  gga_c_tca.c  gga_k_dk.c  gga_k_pearson.c  gga_k_tflw.c  gga_x_2d_b86.c  gga_x_2d_b86_mgc.c  gga_x_2d_b88.c  gga_x_2d_pbe.c  gga_x_airy.c  gga_x_b86.c  gga_x_b86_mgc.c  gga_x_bayesian.c  gga_x_c09x.c  gga_x_dk87.c  gga_x_ft97.c  gga_x_g96.c  gga_x_herman.c  gga_x_ityh.c  gga_x_kt.c  gga_x_lb.c  gga_x_lg93.c  gga_x_mpbe.c  gga_x_optx.c  gga_x_pbea.c  gga_x_pw91.c  gga_x_vmt.c  gga_x_wc.c  gga_xc_1w.c  gga_xc_b97.c  gga_xc_edf1.c  (+42 more)
devel/lib/libxc/testsuite/: Makefile.in  xc-get_data.c  xc-reference.pl  xc-regression.c  xc-run_testsuite
lib/archive/Ydriver-src/config/: acx_fortran_flags.m4  acx_fpp.m4  acx_misc.m4  configure.ac  defs.mk.in  version.m4
lib/libxc/src/: Makefile.am  Makefile.in  bessel.c  functionals.c  get_funcs.pl  gga_c_am05.c  gga_c_ft97.c  gga_c_lyp.c  gga_c_optc.c  gga_c_p86.c  gga_c_pbe.c  gga_c_pw91.c  gga_c_sogga11.c  gga_c_wi.c  gga_c_wl.c  gga_k_dk.c  gga_k_ol1.c  gga_k_ol2.c  gga_k_pearson.c  gga_k_tflw.c  gga_x_2d_b86.c  gga_x_2d_b86_mgc.c  gga_x_2d_b88.c  gga_x_2d_pbe.c  gga_x_airy.c  gga_x_am05.c  gga_x_b86.c  gga_x_b86_mgc.c  gga_x_b88.c  gga_x_bpccac.c  gga_x_c09x.c  gga_x_ft97.c  gga_x_g96.c  gga_x_herman.c  gga_x_hjs.c  gga_x_htbs.c  gga_x_kt.c  gga_x_lb.c  gga_x_lg93.c  gga_x_n12.c  (+64 more)
lib/libxc/testsuite/: Makefile.am  Makefile.in  xc-consistency.c
lib/libxc/testsuite/df_repo/: gga_c_lyp.data  gga_x_pbe.data  gga_xc_b97.data  gga_xc_b97_2.data  gga_xc_edf1.data  gga_xc_hcth_120.data  lda_c_vwn_rpa.data  lda_x.data
lib/libxc/testsuite/regression/: gga_c_lyp.data.bz2  gga_c_p86.data.bz2  gga_c_pbe.data.bz2  gga_c_pbe_sol.data.bz2  gga_c_sogga11.data.bz2  gga_c_wi0.data.bz2  gga_k_gp85.data.bz2  gga_k_gr.data.bz2  gga_k_lc94.data.bz2  gga_k_llp.data.bz2  gga_k_ludena.data.bz2  gga_k_tw3.data.bz2  gga_x_2d_b88.data.bz2  gga_x_am05.data.bz2  gga_x_apbe.data.bz2  gga_x_b86_mgc.data.bz2  gga_x_b88.data.bz2  gga_x_bayesian.data.bz2  gga_x_g96.data.bz2  gga_x_herman.data.bz2  gga_x_htbs.data.bz2  gga_x_kt1.data.bz2  gga_x_lag.data.bz2  gga_x_lb.data.bz2  gga_x_lg93.data.bz2  gga_x_mpw91.data.bz2  gga_x_optb88_vdw.data.bz2  gga_x_pbe_r.data.bz2  gga_x_pw91.data.bz2  gga_x_rge2.data.bz2  gga_x_rpbe.data.bz2  gga_x_rpw86.data.bz2  gga_x_xpbe.data.bz2  gga_xc_b97_d.data.bz2  gga_xc_b97_k.data.bz2  gga_xc_pbelyp1w.data.bz2  gga_xc_sb98_2a.data.bz2  gga_xc_th4.data.bz2  gga_xc_th_fc.data.bz2  gga_xc_th_fcfo.data.bz2  (+22 more)
stable/lib/libxc/: configure.ac
stable/lib/libxc/src/: gga_c_wi.c  gga_x_b88.c  gga_x_dk87.c  gga_x_htbs.c  gga_x_sogga11.c  lda_c_ml1.c  lda_c_rpa.c  lda_c_wigner.c
(+5572 files in other folders)
